# catkin_ws

./: .gitattributes  START_DRL_TRAINING.txt  bashrc  mav.parm  mav.tlog  mav.tlog.raw
ros2_ws/: README.md
ros2_ws/src/ardupilot_city_sim_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/ardupilot_city_sim_ros2/ardupilot_city_sim_ros2/: dynamic_obstacle_controller.py  sim_control_gui.py  training_trigger.py
ros2_ws/src/ardupilot_city_sim_ros2/config/: ardupilot_override.parm
ros2_ws/src/ardupilot_city_sim_ros2/launch/: city_sim_gazebo.launch.py
ros2_ws/src/ardupilot_city_sim_ros2/resource/: ardupilot_city_sim_ros2
ros2_ws/src/drl_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/drl_ros2/drl_ros2/: ifds_smoother_node.py  ppo_lstm_trainer_node.py  rospy_compat.py  sensor_vectorizer_node.py  setpoint_follower_node.py
ros2_ws/src/drl_ros2/launch/: drl_train.launch.py
ros2_ws/src/drl_ros2/resource/: drl_ros2
src/: README.md  TROUBLESHOOTING.md  metrics.csv
src/ardupilot_city_sim/: CMakeLists.txt  README.md  package.xml
src/ardupilot_city_sim/config/: ardupilot_override.parm
src/ardupilot_city_sim/launch/: city_sim_gazebo.launch  curriculum_gazebo.launch  curriculum_stage1.launch  curriculum_stage2.launch  curriculum_stage3.launch  full_stack.launch  mavros_connect.launch
src/ardupilot_city_sim/models/front_camera_ros/: model.config  model.sdf
src/ardupilot_city_sim/models/hokuyo_180_ros/: model.config  model.sdf
src/ardupilot_city_sim/models/iris_px4_sensors/: model.config  model.sdf
src/ardupilot_city_sim/models/iris_with_lidar_camera/: model.config  model.sdf
src/ardupilot_city_sim/models/iris_with_lidar_camera_px4/: model.config  model.sdf
src/ardupilot_city_sim/models/iris_with_lidar_camera_ros/: model.config  model.sdf
src/ardupilot_city_sim/models/target_marker_red/: model.config  model.sdf
src/ardupilot_city_sim/scripts/: dynamic_obstacle_controller.py  sim_control_gui.py  training_trigger.py
src/ardupilot_city_sim/worlds/: city_sim.world  curriculum_stage1_empty.world  curriculum_stage2_obstacles.world  curriculum_stage3_city.world
src/drl/: CMakeLists.txt  __init__.py  drl  drl_agent_node.py  dummy_gcs_heartbeat.py  ekf2_config_node.py  env_bridge.py  gazebo_vision_bridge.py  ifds_smoother_node.py  mission_control_dashboard.py  mission_manager.py  package.xml  pose_to_tf.py  ppo_lstm_agent_node.py  ppo_lstm_trainer_node.py  requirements.txt  safety_filter_node.py  sensor_vectorizer_node.py  setpoint_follower_node.py  setup.py  target_marker_node.py  tracker_node.py  waypoint_manager_node.py
src/drl/config/: ekf2_vision.params
src/drl/drl_utils/: __init__.py  gae.py  recurrent_batcher.py  sitl_params.py  timeouts.py
src/drl/launch/: drl_infra.launch  drl_train.launch  gazebo_quadcopter.launch  hybrid_system.launch  px4_sitl_gazebo.launch
src/drl/models/: .~lock.metrics.csv#  20260105_170155.pth  20260105_170631.pth  20260105_170814.pth  last.pth  metrics.csv  metrics.csv.backup  metrics.csv.old  metrics_backup_20260119_172434.csv  ppo_lstm_checkpoint.pt
src/drl/msg/: Route.msg
src/drl/rviz/: drl_training.rviz
src/drl/scripts/: configure_px4_params.sh  px4_arm_takeoff.py
src/drl/urdf/: quadcopter.urdf.xacro
src/drl/worlds/: training_environment.world
