<?xml version="1.0"?>
<package format="3">
  <name>ardupilot_city_sim_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 scaffolding for ArduPilot + Gazebo city simulation environment.</description>

  <maintainer email="oguz@example.com">oguz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>drl_ros2</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
