<?xml version="1.0"?>
<package format="3">
  <name>drl_ros2</name>
  <version>1.0.0</version>
  <description>ROS 2 port of the DRL UAV navigation package (PPO+LSTM + IFDS).</description>

  <maintainer email="oguz@example.com">Oguz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Optional at runtime depending on which nodes you run -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

